--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
 	<artifactId>updatechecker</artifactId>
 	<name>Update Checker</name>
 	<version>1.0.2-SNAPSHOT</version>
+	
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>https://opensource.org/licenses/MIT</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,11 +25,11 @@
 	<distributionManagement>
 		<snapshotRepository>
 			<id>codemc-snapshots</id>
-			<url>https://repo.codemc.org/repository/maven-snapshots/</url>
+			<url>https://repo.codemc.io/repository/maven-snapshots/</url>
 		</snapshotRepository>
 		<repository>
 			<id>codemc-releases</id>
-			<url>https://repo.codemc.org/repository/maven-releases/</url>
+			<url>https://repo.codemc.io/repository/maven-releases/</url>
 		</repository>
 	</distributionManagement>
 
